--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1 class="display-4"> Generador de Optativas 3º GDV 2020 </h1>
             <hr/>
             <div class="container-fluid">
-                <h2>Primer Cuatrimestre: <span>NULL</span></p>
-                <h2>Segundo Cuatrimestre: <span>NULL</span></p>
-                <button type = "button" class="btn btn-dark btn-lg" id="gobutton">Generar</button>
+                <h2>Primer Cuatrimestre: <span id="first">NULL</span></p>
+                <h2>Segundo Cuatrimestre: <span id="second">NULL</span></p>
+                <button type = "button" class="btn btn-dark btn-lg" onclick="generate()">Generar</button>
             </div>
             
         </div>
